@@ -4,6 +4,8 @@ import PAI.VOs.*;
 import PAI.domain.Teacher;
 import PAI.domain.programme.Programme;
 import PAI.factory.IProgrammeFactory;
+import PAI.factory.ProgrammeFactoryImpl;
+import PAI.persistence.mem.programme.ProgrammeRepositoryImpl;
 import PAI.repository.programmeRepository.IProgrammeRepository;
 import PAI.service.programme.ProgrammeServiceImpl;
 import org.junit.jupiter.api.Test;
@@ -85,8 +87,17 @@ class ProgrammeServiceImplTest {
         IProgrammeRepository programmeRepository = mock(IProgrammeRepository.class);
         NameWithNumbersAndSpecialChars name = mock(NameWithNumbersAndSpecialChars.class);
         Acronym acronym = mock(Acronym.class);
+        Programme prog = mock(Programme.class);
+        ProgrammeID progID = mock(ProgrammeID.class);
 
         ProgrammeServiceImpl service = new ProgrammeServiceImpl(programmeFactory, programmeRepository);
+
+        when(programmeRepository.findAll()).thenReturn(List.of(prog));
+
+        when(programmeRepository.findAll()).thenReturn(List.of(prog));
+        when(prog.identity()).thenReturn(progID);
+        when(progID.hasThisAcronym(acronym)).thenReturn(false);
+        when(progID.hasThisName(name)).thenReturn(false);
 
         boolean res = service.doesProgrammeExist(name, acronym);
 
@@ -96,26 +107,18 @@ class ProgrammeServiceImplTest {
     }
 
     @Test
-    void returnsTrueWhenProgrammeAlreadyExists() {
+    void returnsFalseWhenAcronymIsNull() {
         //Arrange
         IProgrammeFactory programmeFactory = mock(IProgrammeFactory.class);
         IProgrammeRepository programmeRepository = mock(IProgrammeRepository.class);
         NameWithNumbersAndSpecialChars name = mock(NameWithNumbersAndSpecialChars.class);
-        Acronym acronym = mock(Acronym.class);
-        Programme prog = mock(Programme.class);
-        ProgrammeID progID = mock(ProgrammeID.class);
 
         ProgrammeServiceImpl service = new ProgrammeServiceImpl(programmeFactory, programmeRepository);
 
-        when(programmeRepository.findAll()).thenReturn(List.of(prog));
-        when(prog.identity()).thenReturn(progID);
-        when(progID.getAcronym()).thenReturn(acronym);
-        when(progID.getName()).thenReturn(name);
-
-        boolean res = service.doesProgrammeExist(name, acronym);
+        boolean res = service.doesProgrammeExist(name, null);
 
         //Act + Assert
-        assertTrue(res);
+        assertFalse(res);
 
     }
 
@@ -136,18 +139,74 @@ class ProgrammeServiceImplTest {
     }
 
     @Test
-    void returnsFalseWhenAcronymIsNull() {
+    void returnsTrueWhenProgrammeAlreadyExists() {
         //Arrange
         IProgrammeFactory programmeFactory = mock(IProgrammeFactory.class);
         IProgrammeRepository programmeRepository = mock(IProgrammeRepository.class);
         NameWithNumbersAndSpecialChars name = mock(NameWithNumbersAndSpecialChars.class);
+        Acronym acronym = mock(Acronym.class);
+        Programme prog = mock(Programme.class);
+        ProgrammeID progID = mock(ProgrammeID.class);
 
         ProgrammeServiceImpl service = new ProgrammeServiceImpl(programmeFactory, programmeRepository);
 
-        boolean res = service.doesProgrammeExist(name, null);
+        when(programmeRepository.findAll()).thenReturn(List.of(prog));
+        when(prog.identity()).thenReturn(progID);
+        when(progID.hasThisAcronym(acronym)).thenReturn(true);
+        when(progID.hasThisName(name)).thenReturn(true);
+
+        boolean res = service.doesProgrammeExist(name, acronym);
 
         //Act + Assert
-        assertFalse(res);
+        assertTrue(res);
+
+    }
+
+    @Test
+    void returnsTrueWhenProgrammeDoesntHaveName() {
+        //Arrange
+        IProgrammeFactory programmeFactory = mock(IProgrammeFactory.class);
+        IProgrammeRepository programmeRepository = mock(IProgrammeRepository.class);
+        NameWithNumbersAndSpecialChars name = mock(NameWithNumbersAndSpecialChars.class);
+        Acronym acronym = mock(Acronym.class);
+        Programme prog = mock(Programme.class);
+        ProgrammeID progID = mock(ProgrammeID.class);
+
+        ProgrammeServiceImpl service = new ProgrammeServiceImpl(programmeFactory, programmeRepository);
+
+        when(programmeRepository.findAll()).thenReturn(List.of(prog));
+        when(prog.identity()).thenReturn(progID);
+        when(progID.hasThisAcronym(acronym)).thenReturn(true);
+        when(progID.hasThisName(name)).thenReturn(false);
+
+        boolean res = service.doesProgrammeExist(name, acronym);
+
+        //Act + Assert
+        assertTrue(res);
+
+    }
+
+    @Test
+    void returnsTrueWhenProgrammeDoesntHaveAcronym() {
+        //Arrange
+        IProgrammeFactory programmeFactory = mock(IProgrammeFactory.class);
+        IProgrammeRepository programmeRepository = mock(IProgrammeRepository.class);
+        NameWithNumbersAndSpecialChars name = mock(NameWithNumbersAndSpecialChars.class);
+        Acronym acronym = mock(Acronym.class);
+        Programme prog = mock(Programme.class);
+        ProgrammeID progID = mock(ProgrammeID.class);
+
+        ProgrammeServiceImpl service = new ProgrammeServiceImpl(programmeFactory, programmeRepository);
+
+        when(programmeRepository.findAll()).thenReturn(List.of(prog));
+        when(prog.identity()).thenReturn(progID);
+        when(progID.hasThisAcronym(acronym)).thenReturn(false);
+        when(progID.hasThisName(name)).thenReturn(true);
+
+        boolean res = service.doesProgrammeExist(name, acronym);
+
+        //Act + Assert
+        assertTrue(res);
 
     }
 
@@ -172,6 +231,60 @@ class ProgrammeServiceImplTest {
         when(prog.identity()).thenReturn(progID);
         when(progID.getAcronym()).thenReturn(acronym);
         when(progID.getName()).thenReturn(name);
+
+        //act + assert
+        assertThrows(Exception.class, () -> service.registerProgramme(name, acronym, quantityOfEcts, quantityOfSemesters, degreeTypeID, departmentID, programmeDirectorID));
+
+    }
+
+    @Test
+    void shouldNotRegisterProgrammeWhenProgrammeNameAlreadyExists() {
+        //Arrange
+        IProgrammeFactory programmeFactory = mock(IProgrammeFactory.class);
+        IProgrammeRepository programmeRepository = mock(IProgrammeRepository.class);
+        NameWithNumbersAndSpecialChars name = mock(NameWithNumbersAndSpecialChars.class);
+        Acronym acronym = mock(Acronym.class);
+        QuantEcts quantityOfEcts = mock(QuantEcts.class);
+        QuantSemesters quantityOfSemesters = mock(QuantSemesters.class);
+        DegreeTypeID degreeTypeID = mock(DegreeTypeID.class);
+        DepartmentID departmentID = mock(DepartmentID.class);
+        TeacherID programmeDirectorID = mock(TeacherID.class);
+        Programme prog = mock(Programme.class);
+        ProgrammeID progID = mock(ProgrammeID.class);
+
+        ProgrammeServiceImpl service = new ProgrammeServiceImpl(programmeFactory, programmeRepository);
+
+        when(programmeRepository.findAll()).thenReturn(List.of(prog));
+        when(prog.identity()).thenReturn(progID);
+        when(progID.hasThisAcronym(acronym)).thenReturn(true);
+        when(progID.hasThisName(name)).thenReturn(false);
+
+        //act + assert
+        assertThrows(Exception.class, () -> service.registerProgramme(name, acronym, quantityOfEcts, quantityOfSemesters, degreeTypeID, departmentID, programmeDirectorID));
+
+    }
+
+    @Test
+    void shouldNotRegisterProgrammeWhenProgrammeAcronymAlreadyExists() {
+        //Arrange
+        IProgrammeFactory programmeFactory = mock(IProgrammeFactory.class);
+        IProgrammeRepository programmeRepository = mock(IProgrammeRepository.class);
+        NameWithNumbersAndSpecialChars name = mock(NameWithNumbersAndSpecialChars.class);
+        Acronym acronym = mock(Acronym.class);
+        QuantEcts quantityOfEcts = mock(QuantEcts.class);
+        QuantSemesters quantityOfSemesters = mock(QuantSemesters.class);
+        DegreeTypeID degreeTypeID = mock(DegreeTypeID.class);
+        DepartmentID departmentID = mock(DepartmentID.class);
+        TeacherID programmeDirectorID = mock(TeacherID.class);
+        Programme prog = mock(Programme.class);
+        ProgrammeID progID = mock(ProgrammeID.class);
+
+        ProgrammeServiceImpl service = new ProgrammeServiceImpl(programmeFactory, programmeRepository);
+
+        when(programmeRepository.findAll()).thenReturn(List.of(prog));
+        when(prog.identity()).thenReturn(progID);
+        when(progID.hasThisAcronym(acronym)).thenReturn(false);
+        when(progID.hasThisName(name)).thenReturn(true);
 
         //act + assert
         assertThrows(Exception.class, () -> service.registerProgramme(name, acronym, quantityOfEcts, quantityOfSemesters, degreeTypeID, departmentID, programmeDirectorID));
@@ -280,10 +393,8 @@ class ProgrammeServiceImplTest {
 
         ProgrammeServiceImpl service = new ProgrammeServiceImpl(doubleFactory,doubleRepo);
 
-        DepartmentID departmentID = mock(DepartmentID.class);
-
         //Act
-        List<ProgrammeID> result = service.findProgrammeByDepartment(departmentID);
+        List<ProgrammeID> result = service.findProgrammeByDepartment(null);
 
         //Assert
         assertTrue(result.isEmpty());
@@ -291,7 +402,7 @@ class ProgrammeServiceImplTest {
     }
 
     @Test
-    void shouldFindProgrammeByDegreeTypeID() throws Exception {
+    void shouldFindProgrammeByDegreeTypeID() throws IllegalArgumentException {
         //Arrange
         IProgrammeFactory doubleFactory = mock(IProgrammeFactory.class);
         IProgrammeRepository doubleRepo = mock(IProgrammeRepository.class);
@@ -303,8 +414,8 @@ class ProgrammeServiceImplTest {
         Programme programme2 = mock(Programme.class);
 
         when(doubleRepo.findAll()).thenReturn(List.of(programme1,programme2));
-        when(programme1.getDegreeTypeID()).thenReturn(id1);
-        when(programme2.getDegreeTypeID()).thenReturn(id1);
+        when(programme1.hasThisDegreeTypeID(id1)).thenReturn(true);
+        when(programme2.hasThisDegreeTypeID(id1)).thenReturn(true);
 
         //Act
         List<Programme> result = service.getProgrammesByDegreeTypeID(id1);
@@ -315,14 +426,19 @@ class ProgrammeServiceImplTest {
     }
 
     @Test
-    void shouldNotFindProgrammeByDegreeTypeID() throws Exception {
+    void shouldNotFindProgrammeByDegreeTypeID() throws IllegalArgumentException {
         //Arrange
         IProgrammeFactory doubleFactory = mock(IProgrammeFactory.class);
         IProgrammeRepository doubleRepo = mock(IProgrammeRepository.class);
 
         ProgrammeServiceImpl service = new ProgrammeServiceImpl(doubleFactory,doubleRepo);
 
+        Programme prog1 = mock(Programme.class);
+
         DegreeTypeID degreeTypeID = mock(DegreeTypeID.class);
+
+        when(doubleRepo.findAll()).thenReturn(List.of(prog1));
+        when(prog1.hasThisDegreeTypeID(degreeTypeID)).thenReturn(false);
 
         //Act
         List<Programme> result = service.getProgrammesByDegreeTypeID(degreeTypeID);
@@ -332,46 +448,9 @@ class ProgrammeServiceImplTest {
 
     }
 
-    @Test
-    void shouldFindProgrammeIDByProgramme() throws Exception {
-        //Arrange
-        IProgrammeFactory doubleFactory = mock(IProgrammeFactory.class);
-        IProgrammeRepository doubleRepo = mock(IProgrammeRepository.class);
-
-        ProgrammeServiceImpl service = new ProgrammeServiceImpl(doubleFactory,doubleRepo);
-
-        Programme programme1 = mock(Programme.class);
-        ProgrammeID id1 = mock(ProgrammeID.class);
-        when(doubleRepo.findAll()).thenReturn(Arrays.asList(programme1));
-        when(programme1.sameAs(programme1)).thenReturn(true);
-        when(programme1.identity()).thenReturn(id1);
-
-        //Act
-        Optional<ProgrammeID> result = service.findProgrammeIdByProgramme(programme1);
-
-        //Assert
-        assertNotNull(Optional.of(result));
-
-    }
 
     @Test
-    void shouldNotFindProgrammeIDByProgramme() throws Exception {
-        //Arrange
-        IProgrammeFactory doubleFactory = mock(IProgrammeFactory.class);
-        IProgrammeRepository doubleRepo = mock(IProgrammeRepository.class);
-
-        ProgrammeServiceImpl service = new ProgrammeServiceImpl(doubleFactory,doubleRepo);
-
-        //Act
-        Optional<ProgrammeID> result = service.findProgrammeIdByProgramme(null);
-
-        //Assert
-        assertTrue(result.isEmpty());
-
-    }
-
-    @Test
-    void shouldFindProgrammeByName() throws IllegalArgumentException {
+    void shouldFindProgrammeByName() {
         //Arrange
         IProgrammeFactory doubleFactory = mock(IProgrammeFactory.class);
         IProgrammeRepository doubleRepo = mock(IProgrammeRepository.class);
@@ -381,7 +460,7 @@ class ProgrammeServiceImplTest {
         NameWithNumbersAndSpecialChars name = mock(NameWithNumbersAndSpecialChars.class);
         Programme programme1 = mock(Programme.class);
 
-        when(doubleRepo.findAll()).thenReturn(Arrays.asList(programme1));
+        when(doubleRepo.findAll()).thenReturn(List.of(programme1));
         when(programme1.hasThisProgrammeName(name)).thenReturn(true);
 
         //Act
@@ -393,15 +472,22 @@ class ProgrammeServiceImplTest {
     }
 
     @Test
-    void shouldNotFindProgrammeByName() throws IllegalArgumentException {
+    void shouldNotFindProgrammeByName() {
         //Arrange
-        IProgrammeFactory doubleFactory = mock(IProgrammeFactory.class);
-        IProgrammeRepository doubleRepo = mock(IProgrammeRepository.class);
+        IProgrammeFactory doubleFactory = mock(ProgrammeFactoryImpl.class);
+        IProgrammeRepository doubleRepo = mock(ProgrammeRepositoryImpl.class);
 
         ProgrammeServiceImpl service = new ProgrammeServiceImpl(doubleFactory,doubleRepo);
 
+        Programme prog1 = mock(Programme.class);
+
+        NameWithNumbersAndSpecialChars name = mock(NameWithNumbersAndSpecialChars.class);
+
+        when(doubleRepo.findAll()).thenReturn(List.of(prog1));
+        when(prog1.hasThisProgrammeName(name)).thenReturn(false);
+
         //Act
-        Optional<Programme> result = service.getProgrammeByName(null);
+        Optional<Programme> result = service.getProgrammeByName(name);
 
         //Assert
         assertTrue(result.isEmpty());
@@ -409,7 +495,7 @@ class ProgrammeServiceImplTest {
     }
 
     @Test
-    void shouldGetProgrammeByAcronym() throws IllegalArgumentException {
+    void shouldGetProgrammeByAcronym() {
         //Arrange
         IProgrammeFactory doubleFactory = mock(IProgrammeFactory.class);
         IProgrammeRepository doubleRepo = mock(IProgrammeRepository.class);
@@ -419,35 +505,46 @@ class ProgrammeServiceImplTest {
         Acronym acronym = mock(Acronym.class);
         Programme programme1 = mock(Programme.class);
 
-        when(doubleRepo.findAll()).thenReturn(Arrays.asList(programme1));
+        when(doubleRepo.findAll()).thenReturn(List.of(programme1));
         when(programme1.getAcronym()).thenReturn(acronym);
+        when(programme1.hasThisProgrammeAcronym(acronym)).thenReturn(true);
 
         //Act
-        Programme result = service.getProgrammeByAcronym(acronym);
+        Optional<Programme> result = service.getProgrammeByAcronym(acronym);
 
         //Assert
-        assertNotNull(result);
+        assertNotNull(Optional.of(result));
 
     }
 
+
     @Test
-    void shouldNotGetProgrammeByAcronym() throws IllegalArgumentException {
+    void shouldNotGetProgrammeByAcronym() {
         //Arrange
-        IProgrammeFactory doubleFactory = mock(IProgrammeFactory.class);
-        IProgrammeRepository doubleRepo = mock(IProgrammeRepository.class);
+        IProgrammeFactory doubleFactory = mock(ProgrammeFactoryImpl.class);
+        IProgrammeRepository doubleRepo = mock(ProgrammeRepositoryImpl.class);
 
         ProgrammeServiceImpl service = new ProgrammeServiceImpl(doubleFactory,doubleRepo);
 
+        Programme prog1 = mock(Programme.class);
+
+        Acronym acronym = mock(Acronym.class);
+        Acronym acronym1 = mock(Acronym.class);
+
+        when(doubleRepo.findAll()).thenReturn(List.of(prog1));
+        when(prog1.getAcronym()).thenReturn(acronym);
+        when(prog1.hasThisProgrammeAcronym(acronym1)).thenReturn(false);
+
         //Act
-        Programme result = service.getProgrammeByAcronym(null);
+        Optional<Programme> result = service.getProgrammeByAcronym(acronym1);
 
         //Assert
-        assertNull(result);
+        assertTrue(result.isEmpty());
 
     }
 
     @Test
-    void shouldGetAllProgrammeIDs() throws IllegalArgumentException {
+    void shouldGetAllProgrammeIDs() {
         //Arrange
         IProgrammeFactory doubleFactory = mock(IProgrammeFactory.class);
         IProgrammeRepository doubleRepo = mock(IProgrammeRepository.class);
@@ -472,7 +569,7 @@ class ProgrammeServiceImplTest {
     }
 
     @Test
-    void shouldNotGetAllProgrammeIDs() throws IllegalArgumentException {
+    void shouldNotGetAllProgrammeIDs() {
         //Arrange
         IProgrammeFactory doubleFactory = mock(IProgrammeFactory.class);
         IProgrammeRepository doubleRepo = mock(IProgrammeRepository.class);
@@ -488,7 +585,7 @@ class ProgrammeServiceImplTest {
     }
 
     @Test
-    void shouldFindAll() throws IllegalArgumentException {
+    void shouldFindAll() {
         //Arrange
         IProgrammeFactory doubleFactory = mock(IProgrammeFactory.class);
         IProgrammeRepository doubleRepo = mock(IProgrammeRepository.class);
@@ -507,7 +604,7 @@ class ProgrammeServiceImplTest {
     }
 
     @Test
-    void shouldNotFindAll() throws IllegalArgumentException {
+    void shouldNotFindAll() {
         //Arrange
         IProgrammeFactory doubleFactory = mock(IProgrammeFactory.class);
         IProgrammeRepository doubleRepo = mock(IProgrammeRepository.class);
@@ -522,7 +619,7 @@ class ProgrammeServiceImplTest {
     }
 
     @Test
-    void getProgrammeByIDFoundShouldReturnProgramme() throws Exception {
+    void getProgrammeByIDFoundShouldReturnProgramme() {
         // Arrange
         IProgrammeRepository programmeRepository = mock(IProgrammeRepository.class);
         IProgrammeFactory programmeFactory = mock(IProgrammeFactory.class);
@@ -546,7 +643,7 @@ class ProgrammeServiceImplTest {
     }
 
     @Test
-    void getProgrammeByIDShouldReturnEmptyOptionalWhenProgrammeNotFound() throws Exception {
+    void getProgrammeByIDShouldReturnEmptyOptionalWhenProgrammeNotFound() {
         // Arrange
         IProgrammeRepository programmeRepository = mock(IProgrammeRepository.class);
         IProgrammeFactory programmeFactory = mock(IProgrammeFactory.class);
@@ -590,4 +687,43 @@ class ProgrammeServiceImplTest {
         assertTrue(result.isEmpty());
     }
 
+    @Test
+    void shouldThrowExceptionWhenProgrammeNotFound() {
+        IProgrammeRepository programmeRepository = mock(IProgrammeRepository.class);
+        IProgrammeFactory programmeFactory = mock(IProgrammeFactory.class);
+        NameWithNumbersAndSpecialChars name = mock(NameWithNumbersAndSpecialChars.class);
+        Acronym acronym = mock(Acronym.class);
+        ProgrammeID programmeID = new ProgrammeID(name, acronym);
+        TeacherID directorID = mock(TeacherID.class);
+
+        when(programmeRepository.ofIdentity(programmeID)).thenReturn(Optional.empty());
+
+        ProgrammeServiceImpl service = new ProgrammeServiceImpl(programmeFactory, programmeRepository);
+
+        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
+            service.changeProgrammeDirector(programmeID, directorID);
+        });
+
+        assertEquals("Programme not found", exception.getMessage());
+    }
+
+    @Test
+    void shouldReturnProgrammeWhenNameMatches() {
+        //arrange
+        IProgrammeRepository programmeRepository = mock(IProgrammeRepository.class);
+        IProgrammeFactory programmeFactory = mock(IProgrammeFactory.class);
+        NameWithNumbersAndSpecialChars name = new NameWithNumbersAndSpecialChars("Engenharia Informática");
+
+        Programme programme = mock(Programme.class);
+        when(programme.hasThisProgrammeName(name)).thenReturn(true);
+
+        when(programmeRepository.findAll()).thenReturn(List.of(programme));
+
+        ProgrammeServiceImpl service = new ProgrammeServiceImpl(programmeFactory, programmeRepository);
+        //act
+        Optional<Programme> result = service.getProgrammeByName(name);
+        //assert
+        assertTrue(result.isPresent());
+        assertEquals(programme, result.get());
+    }
 }
